# NovaFlow

./: .env.example  .gitignore  README.md  novaflow.py  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  base_agent.py
src/core/: __init__.py  config.py  llm_factory.py
src/utils/: __init__.py
tests/: __init__.py  test_platforms.py
web/: .env.local.example  README.md  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/adapt/: route.ts
web/components/: ContentDisplay.tsx  ContentInput.tsx  PlatformSelector.tsx
